--- a/project1/libs/css/style.css
+++ b/project1/libs/css/style.css
@@ -3,58 +3,56 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Andika New Basic", sans-serif;
-}
-div.header{
-  height:81px;
-}
-
-img.logo {
-  width: 40px;
-  height: 40px;
-  margin-left: 5px;
-}
-
- nav.navbar.navbar-expand-sm.bg-secondary.fixed-top {
-   height:81px;
-} 
-
-
-select#selcountry{
-  width:150px;
-  margin: 15px 10px 15px 0px;
-  border-radius: 5px;
-  text-align: center;
 
 }
-div.options {
+body {
+  margin: 0;
+}
+
+html, body, #mymap {
+  height: 100%;
+}
+div.options{
   position: relative;
-  width:200px;
-  padding:20px;
-  height: 110px;
-  z-index: 2;
+ z-index: 2;
+ margin-left: auto;
+ margin-right: auto;
+ width: 11rem;
 }
-
-button#btnwiki.nav-item.bg-light{
-  width: 150px;
-  margin: 15px 10px 15px 10px;
+ 
+select#selcountry{
+  position: absolute;
+ z-index: 2;
   border-radius: 5px;
-  text-align: center;
-  height:35px;
-  margin-top: 34px;
-}
+}  
 
 div.main {
-  height: 635px;
-  width: 1366px;
+  height: 100vh;
   overflow: hidden;
 }
 
 #mapid {
-  height: 585px;
+  height: 100%;
   position: relative;
   z-index: 1;
-  overflow: hidden;
+ 
 }
+.modal-header{
+  background-color: #0f991d;
+}
+#btn_cls{
+  background-color: #0f991d;
+  width:28px;
+  height:28px;
+}
+#exampleModalLabel{
+  color:white;
+}
+div.modal-content{
+  border-radius: 10px 10px;
+}
+
+
 
 div.container {
   position: absolute;
@@ -83,15 +81,18 @@ table {
 }
 tr,
 td {
-  width: 600px;
   text-align: left;
+  line-height: 40px;
 }
-td {
-  width: 272px;
-}
+
 tr > td:first-child {
-  width: 55px;
+  width: 50px;
 }
+
+
+
+
+
 
 .icon_pic img {
   width: 27px;
@@ -171,717 +172,5 @@ img.popup_image {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
-  }
-}
-
-
-/* done....*/
-@media only screen and (max-width: 575px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Andika New Basic", sans-serif;
-    font-size: 16px;
-  }
-
-  div.header {
-    height: 79px;
-    margin-bottom: 0px;
-  }
-  img.logo {
-    display: none;
-   
-  }
-  nav.navbar.navbar-expand-sm.bg-secondary.fixed-top {
-    height: 79px;
-  }
-  select#selcountry.bg-light{
-    width:145px;
-    border-radius: 5px;
-    text-align: center;
-   
-  
-  }
-  div.options {
-    position: relative;
-    width:200px;
-    padding:20px;
-    height: 110px;
-    z-index: 2;
-    bottom:17px;
-    left:5px;
-  }
-  
-  button#btnwiki.bg-light{
-    width: 145px;
-    border-radius: 5px;
-    text-align: center;
-    height:32px;
-    margin-top: 15px;
-
-  }
-
-  div.main {
-    height: 731px;
-    width: 100%;
-    overflow: hidden;
-  }
-
-  #mapid {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    margin-top: 0px;
-  }
-
-  div.container {
-    position: fixed;
-    right: 1px;
-    height: 35px;
-    bottom: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
-    transition: height 2s;
-    z-index: 2;
-    line-height: 24px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    width: 100%;
-    overflow:hidden;
-    border-radius: 25px 25px 0px 0px;
-    font-size: 14px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 500px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-  }
-  table {
-    width: 100%;
-  }
-  tr {
-    width: 440px;
-    text-align: left;
-  }
-  td {
-    width: 210px;
-    text-align: left;
-  }
-  tr > td:first-child {
-    width: 20px;
-  }
-
-  .icon_pic img {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
-  }
-  h3 {
-    text-align: center;
-  }
-
-  .up img {
-    width: 50px;
-    height: 20px;
-  }
-
-  img#recenter {
-    position: fixed;
-    width: 40px;
-    height: 30px;
-    float: right;
-    bottom: 120px;
-    right: 20px;
-    z-index: 2;
-  }
-  h6 {
-    font-weight: bold;
-  }
-
-  div.popup {
-    text-align: center;
-    width: 145px;
-    height: 190px;
-  }
-  img.popup_image {
-    text-align: center;
-    width: 143px;
-    height: 147px;
-    overflow-y: hidden;
-  }
-  #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    overflow: hidden;
-    background: #fff;
-  }
-  
-  #preloader:before {
-    content: "";
-    position: fixed;
-    top: calc(50% - 30px);
-    left: calc(50% - 30px);
-    border: 6px solid #f2f2f2;
-    border-top: 6px solid #56829e;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    -webkit-animation: animate-preloader 1s linear infinite;
-    animation: animate-preloader 1s linear infinite;
-  }
-  
-  @-webkit-keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  
-}
-
-/* Small devices (landscape phones, 576px and up)  */
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Andika New Basic", sans-serif;
-  }
-  div.header{
-    height:81px;
-  }
-  img.logo {
-    width: 40px;
-    height: 40px;
-    margin-left: 20px;
-  }
-
- select#selcountry.bg-light {
-    width: 140px;
-    margin: 17px 0px 15px 0px;
-    
-  }
-  
-  button#btnwiki.bg-light{
-    width: 145px;
-    border-radius: 5px;
-    text-align: center;
-    height:32px;
-    margin-top: 37px;
-
-  }
-  div.main {
-    height: 566px;
-    width: auto;
-    overflow: hidden;
-  }
-  #mapid {
-    height: 100%;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
-  div.container {
-    position: fixed;
-    right: 40px;
-    height: 30px;
-    bottom: 0px;
-    padding-left: 15px;
-    padding-right: 20px;
-    transition: height 2s;
-    overflow: hidden;
-    z-index: 2;
-    line-height: 24px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    width: 640px;
-    border-radius: 15px 15px 0px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 300px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-  }
-  h3 {
-    text-align: center;
-  }
-
-  .up img {
-    width: 50px;
-    height: 20px;
-  }
-
-  img#recenter {
-    position: fixed;
-    width: 40px;
-    height: 30px;
-    float: right;
-    bottom: 150px;
-    right: 20px;
-    z-index: 2;
-  }
-  h6 {
-    font-weight: bold;
-    text-align: center;
-  }
-  div.popup {
-    text-align: center;
-    width: 121px;
-    height: 145px;
-  }
-  img.popup_image {
-    text-align: center;
-    width: 120px;
-    height: 105px;
-    overflow: hidden;
-    margin-top: 0px;
-  }
-  #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    overflow: hidden;
-    background: #fff;
-  }
-
-  #preloader:before {
-    content: "";
-    position: fixed;
-    top: calc(50% - 30px);
-    left: calc(50% - 30px);
-    border: 6px solid #f2f2f2;
-    border-top: 6px solid #56829e;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    -webkit-animation: animate-preloader 1s linear infinite;
-    animation: animate-preloader 1s linear infinite;
-  }
-
-  @-webkit-keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-}
-
-
-@media only screen and (min-width: 768px) {
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Andika New Basic", sans-serif;
-    font-size: 18px;
-  }
-  img.logo {
-    width: 50px;
-    height: 50px;
-    margin-left: 20px;
-  }
-  div.header {
-    height:81px;
-    width: 100%;
-  }
-
-  .nav.justify-content-center{
-    width: 400px;
-  }
-  select#selcountry {
-    width: 160px;
-    margin-top:18px;
-   
-   
-  }
- 
-  button#btnwiki.bg-light{
-    width: 160px;
-    border-radius: 5px;
-    text-align: center;
-    height:35px;
-    margin-top: 37px;
-
-  }
-
-  div.main {
-    height: 943px;
-    width: 100%;
-    overflow: hidden;
-  }
-  #mapid {
-    height: 100%;
-    position: relative;
-  
-  }
-  div.container {
-    position: fixed;
-    width:700px;
-    right: 32px;
-    height: 30px;
-    bottom: 0px;
-    padding-left: 15px;
-    padding-right: 20px;
-    transition: height 2s;
-    overflow: hidden;
-    z-index: 2;
-    line-height: 26px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    border-radius: 15px 15px 0px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 520px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-  }
-  table {
-    width: 100%;
-  }
-  tr {
-    width: 650px;
-    text-align: left;
-  }
-  td {
-    width: 300px;
-    text-align: left;
-  }
-  tr > td:first-child {
-    width: 50px;
-  }
-  h3 {
-    text-align: center;
-  }
-
-  .up img {
-    width: 50px;
-    height: 20px;
-  }
-
-  img#recenter {
-    position: fixed;
-    width: 40px;
-    height: 30px;
-    float: right;
-    bottom: 150px;
-    right: 20px;
-    z-index: 2;
-  }
-  h6 {
-    font-weight: bold;
-    text-align: center;
-  }
-  div.popup {
-    text-align: center;
-    width: 121px;
-    height: 145px;
-  }
-  img.popup_image {
-    text-align: center;
-    width: 120px;
-    height: 105px;
-    overflow: hidden;
-    margin-top: 0px;
-  }
-  #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    overflow: hidden;
-    background: #fff;
-  }
-
-  #preloader:before {
-    content: "";
-    position: fixed;
-    top: calc(50% - 30px);
-    left: calc(50% - 30px);
-    border: 6px solid #f2f2f2;
-    border-top: 6px solid #56829e;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    -webkit-animation: animate-preloader 1s linear infinite;
-    animation: animate-preloader 1s linear infinite;
-  }
-
-  @-webkit-keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes animate-preloader {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-}
-
-@media only screen and (min-width: 1024px){
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Andika New Basic", sans-serif;
-    font-size: 18px;
-  }
-  div.header {
-    height:81px;
-    width: 100%;
-  }
-  .nav.justify-content-center{
-    width: 400px;
-  }
-  select#selcountry.nav-item.bg-light {
-    width: 160px;
-    margin: 16px 0px 15px 20px;
-    height: 40px;
-  }
-  div.main {
-    height: 768px;
-    width: 100%;
-    overflow: hidden;
-  }
-  #mapid {
-    height: 100%;
-    position: relative;
-  
-  }
-  
-  div.container {
-    position: fixed;
-    width:900px;
-    right: 62px;
-    height: 30px;
-    bottom: 0px;
-    padding-left: 15px;
-    padding-right: 20px;
-    transition: height 2s;
-    overflow: hidden;
-    z-index: 2;
-    line-height: 26px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    border-radius: 15px 15px 0px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 520px;
-    overflow-x: scroll;
-    overflow-y: scroll;
-  }
-  img#recenter {
-    position: fixed;
-    width: 50px;
-    height: 40px;
-    float: right;
-    bottom: 50px;
-    right:20px;
-    z-index: 2;
-  }
-}
-
-@media only screen and (min-width: 1280px){
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Andika New Basic", sans-serif;
-    font-size: 18px;
-  }
-  div.header {
-    height:81px;
-    width: 100%;
-  }
-  .nav.justify-content-center{
-    width: 380px;
-  
-  }
-  select#selcountry.nav-item.bg-light {
-    width: 170px;
-    height: 40px;
-  }
-button#btnwiki.nav-item.bg-light {
-  margin-left: 25px;
-}
-  div.main {
-    height: 719px;
-    width: 100%;
-    overflow: hidden;
-  }
-  #mapid {
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-  
-  }
-  
-
-  div.container {
-    position: fixed;
-    width:1000px;
-    right: 140px;
-    height: 30px;
-    bottom: 0px;
-    padding-left: 15px;
-    padding-right: 20px;
-    transition: height 2s;
-    overflow: hidden;
-    z-index: 2;
-    line-height: 26px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    border-radius: 15px 15px 0px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 532px;
-    overflow:hidden;
-  
-  }
-  img#recenter {
-    position: fixed;
-    width: 50px;
-    height: 40px;
-    float: right;
-    bottom: 50px;
-    right:20px;
-    z-index: 2;
-  }
-
-}
-
-@media only screen and (min-width: 1440px){
-  img.logo{
-    margin-left: 25px;
-  }
-  nav.navbar.navbar-expand-sm.bg-secondary.fixed-top {
-    height:81px;
-    width:100%;
- } 
- ul.nav.justify-content-center{
-   width:40%;
- }
- 
- select#selcountry{
-   width:170px;
-   border-radius: 5px;
-   text-align: center;
-   
- 
- }
- div.options {
-   position: relative;
-   width:200px;
-   padding:20px;
-   height: 110px;
-   z-index: 2;
-   margin-left: -130px;
-  
- }
- 
- button#btnwiki.bg-light{
-   width: 170px;
-   margin: 15px 10px 15px 10px;
-   border-radius: 5px;
-   text-align: center;
-   height:35px;
-   margin-left: 40px;
-   margin-top:37px;
- }
-
-div.main {
-    height: 814px;
-    width: 100%;
-    overflow: hidden;
-  }
-  #mapid {
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-  
-  }
-
-
-  div.container {
-    position: fixed;
-    width:1000px;
-    right: 220px;
-    height: 30px;
-    bottom: 0px;
-    padding-left: 15px;
-    padding-right: 20px;
-    transition: height 2s;
-    overflow: hidden;
-    z-index: 2;
-    line-height: 26px;
-    background-color: rgba(245, 246, 248, 0.856);
-    color: black;
-    font-weight: bold;
-    border-radius: 15px 15px 0px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-  .container:hover {
-    height: 550px;
-  
   }
 }
