--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -92,3 +92,32 @@ h5.modal-title{
     margin-left: auto;
     margin-right: auto;
 }
+div.btn-wrapper-phone{
+    display:none;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    [class*="col-"] {
+        width: 100%;
+      }
+      div.btn-wrapper-phone{
+        display:inline-block;
+        width:100%;
+    }
+    .mainbar_image{
+        margin:0rem;
+        margin-right:0.5rem;
+        margin-left:0.5rem;
+    }
+      div.btn-wrapper{
+        display:none;
+    }
+    img.card_image{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+   
+}
