--- a/project2/libs/css/style.css
+++ b/project2/libs/css/style.css
@@ -112,6 +112,10 @@ table, th,tr, td {
 .info_td{
     padding-left: 1rem;
 }
+#myTable_mobo{
+    display:none;
+}
+
 
 
 
@@ -150,4 +154,19 @@ table, th,tr, td {
     #toggle_department{
         padding:0px;
     }
+    
+    .display_none{
+        display:none;
+    }
+   
 }
+
+/* Medium devices (tablets, 768px and up)  */
+@media (min-width: 768px) { 
+    .card_width{
+        width:33%;
+    }
+    .display_none{
+        display:none;
+    }
+ }
